# BAScraper

./: .gitignore  BAscraper.py  LICENSE  Pushpull_params_old.md  README.md  URI_params.md  basic_test.py  main.py  pyproject.toml  setup.py
BAScraper/: BAScraper.py  BAScraper_async.py  BAScraper_async_new.py  __init__.py  services.py  utils.py
BAScraper_old/: BAScraper.py  BAScraper_async_old.py  Pushpull_MT_params.md  README_old.md
src/BAScraper/: BAConfig.py  BAScraper.py  __init__.py  notes.md  service_types.py
src/BAScraper/service_types/: ArcticShiftTypes.py  PullPushTypes.py  __init__.py  service_types.py
src/BAScraper/services/: ArcticShift.py  BaseService.py  PullPush.py  __init__.py  arcticshift.py  base_service.py  pullpush.py
src/BAScraper/utils/: __init__.py  ba_config.py  extra_validators.py  limiter.py  temporal.py
src/BAScraper_old/: BAScraper_async.py  services.py
tests/: Analyzer.ipynb  BAnalyzer-EDA-test.ipynb  BAnalyzer.ipynb  config_test.py  date_split_test.py  json_preprocess_test.py  param_test.py
tests/full/: full_test.py
